# dq-governance-copilot

./: .gitignore  README.md  pyproject.toml  tree.txt
Notebooks/: 01_generate_synthetic_data.ipynb  02_profile_tables.ipynb  02_profile_tables_reduced.ipynb  03_expectations.ipynb  1.5.ipynb
backend/dqcopilot/: config.py
backend/dqcopilot/agent/: graph_app.py  judges.py  state.py  tools.py
backend/dqcopilot/graph/: model.py
backend/dqcopilot/profiling/: anomalies.py  expectations.py  profiler.py
dq_governance_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: dump_headers.py
