[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dq-governance-copilot"
version = "0.0.1"
description = "Data Quality & Governance Copilot on Databricks"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
    "sqlglot",
    "pydantic>=2.0",
    # LangGraph, MLflow, FastAPI, etc. will be added later
]

[tool.setuptools]
packages = ["backend", "backend.dqcopilot"]
